<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.serenitybdd.starter</groupId>
    <artifactId>serenity-cucumber4-starter</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>My Working Life - Test Results</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serenity.version>2.0.40</serenity.version>
        <serenity.maven.version>2.0.40</serenity.maven.version>
        <serenity.cucumber.version>1.0.6</serenity.cucumber.version>
        <cucumber.version>4.2.0</cucumber.version>
        <encoding>UTF-8</encoding>
        <tags></tags>
        <parallel.tests>4</parallel.tests>
        <webdriver.base.url></webdriver.base.url>
    </properties>

    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>bintray</name>
            <url>http://jcenter.bintray.com</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>bintray-plugins</name>
            <url>http://jcenter.bintray.com</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!--<dependency>-->
            <!--<groupId>com.browserstack</groupId>-->
            <!--<artifactId>browserstack-local-java</artifactId>-->
            <!--<version>1.0.3</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.0.13</version>
        </dependency>
        <!--
          - To use Cucumber 4, exclude the old Cucumber 2 cucumber-core dependency from the serenity-core dependency
          - and include the Cucumber 4 cucumber-java and cucumber-junit dependencies.
        -->
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>io.cucumber</groupId>
                    <artifactId>cucumber-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-screenplay</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-screenplay-webdriver</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber4</artifactId>
            <version>${serenity.cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.6.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>info.cukes</groupId>-->
<!--            <artifactId>cucumber-picocontainer</artifactId>-->
<!--            <version>1.2.5</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
<!--                <version>2.7.1</version>-->
                <configuration>
                    <skip>true</skip>
                    <argLine>-Xmx1024m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.maven.version}</version>
                <configuration>
                  <tags>${tags}</tags>
                </configuration>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <includes>
                        <include>starter/CucumberTestSuite.java</include>
                    </includes>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>single</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.1</version>
                        <configuration>
                            <includes>
<!--                                <include>com/browserstack/cucumber/SingleTest.java</include>-->
                                <include>starter/SingleTest.java</include>
                            </includes>
                            <reuseForks>true</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                            <systemPropertyVariables>
                                <webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
                                <environment>single</environment>
                                <taskID>MY_TEST_SCHEMA_${surefire.forkNumber}</taskID>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>local</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.1</version>
                        <configuration>
                            <includes>
                                <include>starter/SingleTest.java</include>
                            </includes>
                            <reuseForks>true</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                            <systemPropertyVariables>
                                <environment>local</environment>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>parallel</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.1</version>
                        <configuration>
                            <includes>
<!--                                <include>starter/Parallel*</include>-->
<!--                                <include>starter/Parallel*</include>-->
                            </includes>
<!--                            <parallel>classes</parallel>-->
                            <threadCount>${parallel.tests}</threadCount>
                            <forkCount>${parallel.tests}</forkCount>
                            <reuseForks>true</reuseForks>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                            <systemPropertyVariables>
                                <environment>parallel_${surefire.forkNumber}</environment>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>safari</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.1</version>
                        <configuration>
                            <includes>
                                <include>**/*Test.java</include>
                                <include>**/Test*.java</include>
                                <include>**/*TestSuite.java</include>
                                <include>**/When*.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <cucumber.options>${cucumber.options}</cucumber.options>

<!--                                <webdriver.driver>${webdriver.driver}</webdriver.driver>-->
                                <browserstack.browser>Safari</browserstack.browser>
                                <browserstack.os>OS X</browserstack.os>
                                <browserstack.os_version>Big Sur</browserstack.os_version>
                                <browserstack.browser_version>14.0</browserstack.browser_version>
                                <!--                                <browserstack.selenium_version>3.5.2</browserstack.selenium_version>-->
                                <!--                                                                <browserstack.browser_version>72.0</browserstack.browser_version>-->
                                <!--                                                                <browserstack.resolution>1280x1024</browserstack.resolution>-->
                            </systemPropertyVariables>
                            <parallel>classes</parallel>
                            <threadCount>${parallel.tests}</threadCount>
                            <forkCount>${parallel.tests}</forkCount>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

            <properties>
                <cucumber.options>
                    --tags @safari
                </cucumber.options>
                <browserstack.browser>Safari</browserstack.browser>
                <browserstack.os>OS X</browserstack.os>
                <browserstack.os_version>El Capitan</browserstack.os_version>
                <browserstack.browser_version>9.1</browserstack.browser_version>
                <!--                <browserstack.browser>chrome</browserstack.browser>-->
                <!--                <browserstack.os>Windows</browserstack.os>-->
                <!--                <browserstack.os_version>10</browserstack.os_version>-->
                <!--                <browserstack.browser_version>72.0</browserstack.browser_version>-->
                <!--                <browserstack.resolution>1280x1024</browserstack.resolution>-->
                <!--<webdriver.base.url>http://www.fitflop.com/</webdriver.base.url>-->
            </properties>
        </profile>
        <profile>
            <id>wchrome</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>2.22.1</version>
                        <configuration>
                            <includes>
                                <include>**/*Test.java</include>
                                <include>**/Test*.java</include>
                                <include>**/*TestSuite.java</include>
                                <include>**/When*.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <browserstack.browser>chrome</browserstack.browser>
                                <browserstack.os>Windows</browserstack.os>
                                <browserstack.os_version>10</browserstack.os_version>
                                <browserstack.browser_version>72.0</browserstack.browser_version>
                                <browserstack.resolution>1280x1024</browserstack.resolution>
                            </systemPropertyVariables>
                            <parallel>classes</parallel>
                            <threadCount>${parallel.tests}</threadCount>
                            <forkCount>${parallel.tests}</forkCount>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

            <properties>
                <cucumber.options>
                    --tags @w-chrome
                </cucumber.options>
                <browserstack.browser>chrome</browserstack.browser>
                <browserstack.os>Windows</browserstack.os>
                <browserstack.os_version>10</browserstack.os_version>
                <browserstack.browser_version>72.0</browserstack.browser_version>
                <browserstack.resolution>1280x1024</browserstack.resolution>
                <browserstack.local>true</browserstack.local>
                <!--<webdriver.base.url>http://www.fitflop.com/</webdriver.base.url>-->
            </properties>
        </profile>
    </profiles>
</project>
